updating to test on Mac

--- a/A1/makefile
+++ b/A1/makefile
@@ -4,5 +4,7 @@
 INCLUDES = -I/usr/include/GL/ -lGL -lGLU -lglut -lm
 
 a1: a1.c graphics.c visible.c graphics.h
-	gcc a1.c graphics.c visible.c -o a1 $(INCLUDES) 
+	gcc a1.c graphics.c visible.c $(INCLUDES) -o a1  
 
+clean:
+	rm a1
