--- a/A1/makefile
+++ b/A1/makefile
@@ -1,7 +1,7 @@
 
-#-F/System/Library/Frameworks -framework OpenGL -framework GLUT
+INCLUDES = -F/System/Library/Frameworks -framework OpenGL -framework GLUT
 
-INCLUDES = -I/usr/include/GL/ -lGL -lGLU -lglut -lm
+# INCLUDES = -I/usr/include/GL/ -lGL -lGLU -lglut -lm
 
 a1: a1.c graphics.c visible.c graphics.h
 	gcc a1.c graphics.c visible.c $(INCLUDES) -o a1  
