Walking bounds set.

--- a/A2/makefile
+++ b/A2/makefile
@@ -1,10 +1,10 @@
 
-INCLUDES = -F/System/Library/Frameworks -framework OpenGL -framework GLUT
+# INCLUDES = -F/System/Library/Frameworks -framework OpenGL -framework GLUT -lm
 
-# INCLUDES = -I/usr/include/GL/ -lGL -lGLU -lglut -lm -g3
+INCLUDES = -I/usr/include/GL/ -lGL -lGLU -lglut -lm -g3
 
 a1: a1.c graphics.c visible.c graphics.h
-	gcc a1.c graphics.c visible.c $(INCLUDES) -o a1  
+	gcc a1.c graphics.c visible.c -o a1 $(INCLUDES) 
 
 clean:
 	rm a1
